# srst-clips

./: README.md  clipboard_monitor.py  dbus_client.py  explain.sh  hello.py  pyproject.toml  requirements.txt
clips/: clipboard_monitor.py  dbus_client.py
