[build-system]                                                                                                
requires = ["setuptools>=61.0.0", "wheel"]                                                                    
build-backend = "setuptools.build_meta"

[project]
name = "srst-clips"
version = "0.1.0"
description = "poor man's copy-pasting to AI window tool, much vibes, very language learning"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pyqt6>=6.8.1",
]

[project.scripts]
srst-clips = "clips.clipboard_monitor:main"
srst-clips-activate = "clips.dbus_client:main"

[tool.setuptools]
packages = ["clips"]
